--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     ]
   },
   "dependencies": {
-    "electron-updater": "^6.0.0"
+    "electron-updater": "^6.0.0",
+    "file-icon": "^5.1.1"
   },
   "devDependencies": {
     "electron": "^34.2.0",
